# student-sync

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  PROTOCOL.md  README.md  appManifest.manifest  ffmpegincludes.h  main.cpp  shared.h  win32includes.h
.github/workflows/: windows-build.yml
ConfigWindow/: config.cpp
GUI/: GUI.cpp  GUI.h
client/: client.cpp  client.h
client/client/: client.cpp  client.hpp
client/preferenceseditor/: preferenceseditor.cpp  preferenceseditor.hpp
client/preferencesmanager/: preferencesmanager.cpp  preferencesmanager.hpp
client/window/: window.cpp  window.events.cpp  window.hpp  window.thread.cpp
clientpreferenceseditor/: clientpreferenceseditor.cpp  clientpreferenceseditor.h
clientpreferencesmanager/: clientpreferencesmanager.cpp  clientpreferencesmanager.h
clientwindow/: clientwindow.cpp  clientwindow.events.cpp  clientwindow.h  clientwindow.thread.cpp
comboboxdialog/: comboboxdialog.cpp  comboboxdialog.h
common/appinfo/: appinfo.h  appinfo.hpp
common/configkeys/: configkeys.h
common/constants/: constants.h
common/displaycapturer/: displaycapturer.cpp  displaycapturer.h  displaycapturer.hpp
common/dynamicbitmap/: dynamicbitmap.cpp  dynamicbitmap.hpp
common/ffmpeg/decoders/: h264Decoder.cpp  h264Decoder.hpp
common/ffmpeg/encoders/: h264Encoder.cpp  h264Encoder.hpp
common/gdiplusutil/: gdiplusutil.cpp  gdiplusutil.hpp
common/generator/: generator.h  generator.hpp
common/managedhandle/: managedhandle.h
common/message/: endstream.h  getstreamparams.h  hello.h  initializestream.h  message.cpp  message.h  ok.h  streamframe.h  streamparams.h
common/messages/: hellomessage.h  number64message.h  streamframemessage.h  stringmessage.h
common/modeselectdialog/: modeselectdialog.cpp  modeselectdialog.hpp
common/networkmessage/: networkmessage.cpp  networkmessage.h
common/preferenceseditor/: preferenceseditor.hpp
common/screenresolution/: screenresolution.cpp  screenresolution.h  screenresolution.hpp
common/smarthandle/: smarthandle.hpp
common/socket/: socket.cpp  socket.h
common/task/: task.h  task.hpp
common/timer/: timer.cpp  timer.hpp
common/videostreamwindow/: videoframebitmap.cpp  videostreamwindow.cpp  videostreamwindow.h
libs/FFmpeg/: .gitattributes  CMakeLists.txt
libs/FFmpeg/doc/: ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-devices.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
libs/FFmpeg/include/libavutil/: ffversion.h
libs/FFmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
modeselectdialog/: modeselectdialog.cpp  modeselectdialog.h
networking/message/: endstream.hpp  getstreamparams.hpp  h264packetmessage.hpp  hello.hpp  initializestream.hpp  message.hpp  ok.hpp  streamframe.hpp  streamparams.hpp
networking/socket/: socket.cpp  socket.hpp  tcpsocket.cpp  tcpsocket.hpp
networking/tlvmessage/: tlvmessage.cpp  tlvmessage.hpp
preferenceseditor/: preferenceseditor.h
server/: server.cpp  server.h  server.multiconnect.cpp  server.singleconnect.cpp
server/preferenceseditor/: preferenceseditor.cpp  preferenceseditor.hpp
server/preferencesmanager/: preferencesmanager.cpp  preferencesmanager.hpp
server/server/: server.cpp  server.hpp
server/session/: session.cpp  session.hpp
server/window/: window.cpp  window.events.cpp  window.hpp
server/window/eventdispatcher/: eventdispatcher.cpp  eventdispatcher.hpp
serverpreferenceseditor/: serverpreferenceseditor.cpp  serverpreferenceseditor.h
serverpreferencesmanager/: serverpreferencesmanager.cpp  serverpreferencesmanager.h
serversession/: serversession.cpp  serversession.h
serverwindow/: serverwindow.cpp  serverwindow.eventdispatcher.cpp  serverwindow.events.cpp  serverwindow.h  serverwindow.session.cpp  serverwindow.thread.cpp
startupwindow/: startupwindow.cpp  startupwindow.h
videostreamwindow/: videoframebitmap.cpp  videoframebitmap.h  videostreamwindow.cpp  videostreamwindow.h
